Crash on maximizing/minimizing UV/Image Editor #39640

Closed
opened 2014-04-08 10:18:24 +02:00 by Jari Aaltonen · 15 comments

System Information
OS X 10.6.8 / ATI Radeon HD 2600

Blender Version
Broken: 2.70 19e627c

Short description of error
Crash while maximizing UV/Image Editor window while rendering.

Exact steps for others to reproduce the error
Crash occurs while rendering with Cycles when maximizing/minimizing UV/Image Editor (showing Render Result) during rendering. Seems to happen when Progressive Refine is enabled. Every other type of window maximizes/minimizes during rendering with no problem.

Happens with every .blend- file.

**System Information** OS X 10.6.8 / ATI Radeon HD 2600 **Blender Version** Broken: 2.70 19e627c **Short description of error** Crash while maximizing UV/Image Editor window while rendering. **Exact steps for others to reproduce the error** Crash occurs while rendering with Cycles when maximizing/minimizing UV/Image Editor (showing Render Result) during rendering. Seems to happen when Progressive Refine is enabled. Every other type of window maximizes/minimizes during rendering with no problem. Happens with every .blend- file.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jaalto-3

Added subscriber: @jaalto-3

Added subscriber: @willi-2

Added subscriber: @willi-2

Seems to be OS (or system) specific. Didn't experience this in the past and when trying now (yes, progressive refine enabled) on Win7/64, AMD HD 6850 (Catalyst 13.12).

Seems to be OS (or system) specific. Didn't experience this in the past and when trying now (yes, progressive refine enabled) on Win7/64, AMD HD 6850 (Catalyst 13.12).

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Even if this happens on every file, can you give exact steps to redo this, or upload a file which has the scene setup.

Also try restore factory settings, then try to redo the bug.

Even if this happens on every file, can you give exact steps to redo this, or upload a file which has the scene setup. Also try restore factory settings, then try to redo the bug.
Author

Restored to factory settings. The same occurs.

Okay, It seems that when I lower the bucket size/tile size below 64x64, then crash.

Restored to factory settings. The same occurs. Okay, It seems that when I lower the bucket size/tile size below 64x64, then crash.

Oh, yes, now I succeeded in reproducing it. Had to set tile size to 16x16 and had to maximize/restore several times. I could post the stacktrace, but without debug symbols it doesn't say a lot. I was also not able to reproduce it without progressive refine.

EDIT: I do not even have to open the render result in the image editor to make it crash, but it must be the image editor that is being maximized/restored.

Oh, yes, now I succeeded in reproducing it. Had to set tile size to 16x16 and had to maximize/restore several times. I could post the stacktrace, but without debug symbols it doesn't say a lot. I was also not able to reproduce it without progressive refine. EDIT: I do not even have to open the render result in the image editor to make it crash, but it must be the image editor that is being maximized/restored.

@jaalto-3 please post a file which crashes when you press render.

@jaalto-3 please post a file which crashes when you press render.

#39640.blend

Open the file, press F12, Press Ctrl+Down and keep the Down key pressed (so that it is always switching between maximized and normal view). Might take few seconds until it crashes.

[#39640.blend](https://archive.blender.org/developer/F84315/T39640.blend) Open the file, press F12, Press Ctrl+Down and keep the Down key pressed (so that it is always switching between maximized and normal view). Might take few seconds until it crashes.
Sergey Sharybin self-assigned this 2014-04-10 17:57:46 +02:00

Seems to be issue caused by mine changes in partial update.

Seems to be issue caused by mine changes in partial update.

This issue was referenced by blender/blender-addons-contrib@6300d22dab

This issue was referenced by blender/blender-addons-contrib@6300d22dabaec5dfa82fd290dc6a3036797507f8

This issue was referenced by 6300d22dab

This issue was referenced by 6300d22dabaec5dfa82fd290dc6a3036797507f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6300d22dab.

Closed by commit 6300d22dab.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39640
No description provided.