Fix T39640: Crash on maximizing/minimizing UV/Image Editor

Added a NULL-pointer check for now, actual issue might be
burried somewhere else (aka maybe traversal of the WM is
not actually correct here?)